--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+body {
+  font-family: "SUSE", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 2;
+  font-style: normal;
+}
+
 .wrapper {
     display: flex;
     flex-direction: column;
@@ -6,15 +13,67 @@
     width:100%;
     min-height: 1000px;
     background-attachment: fixed;
-    background-image: url('Bubblesort-edited-color.svg.png');
+    background-image: url('2967.gif');
     background-position: center;
     background-size: cover;
     margin-top:0;
   
   }
 
+.main-text-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+  grid-auto-rows: minmax(100px, auto);
+}
+
 .main-text {
     text-align: center;
-    background-color: aqua;
+    background-color: rgba(11, 40, 77, 0.6);
     padding: 20px;
+    grid-column: 2;
+    grid-row: 2 / 3;
+}
+
+.yippeeman {
+  grid-row: 1;
+  grid-column: 1;
+}
+
+.yippeeman:active {
+  transform: translateY(10px);
+}
+
+.numclicked{
+  font-size: 50px;
+  color:black;
+}
+
+.filler {
+  padding:10%;
+}
+h1 {
+  font-size: xx-large;
+  color:antiquewhite
+}
+ 
+h1:hover {
+  transition-duration: 0.5s;
+  color:rgb(13, 10, 7);
+}
+
+h3,h4 {
+  color: antiquewhite;
+}
+
+h3:hover,h4:hover{
+  transition-duration: 0.5s;
+  color:rgb(29, 26, 23);
+}
+
+.puzzle1img {
+  border-top-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+  border-top-right-radius: 2rem;
+  border-bottom-left-radius: 2rem;
 }
